--- a/.github/workflows/npmpublishbeta.yml
+++ b/.github/workflows/npmpublishbeta.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: yarn install
+      - run: npm ci
       - run: npm test
 
   publish-npm:
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
-      - run: yarn install
+      - run: npm ci
       - run: npm version --no-git-tag-version $(npm view strapi-hook-redis-connection@beta version) --allow-same-version
       - run: npm version --no-git-tag-version prerelease --preid=beta
       - run: npm publish --tag beta
