--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "strapi-hook-redis-connection",
-  "version": "0.3.1",
+  "version": "1.0.0",
   "description": "Redis hook for the Strapi framework",
   "main": "./lib",
-  "directories": {
-    "lib": "./lib"
-  },
+  "files": ["lib"],
   "scripts": {
     "test": "echo \"no tests yet\""
   },
