--- a/.github/workflows/npmpublishbeta.yml
+++ b/.github/workflows/npmpublishbeta.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: npm ci
+      - run: npm install
       - run: npm test
 
   publish-npm:
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
-      - run: npm ci
+      - run: npm install
       - name: Check latest package version
         run: |
           latest=$(npm view strapi-hook-redis-connection@latest version)
